--- a/style_final.scss
+++ b/style_final.scss
@@ -2,8 +2,11 @@
 
 div {
     cursor:grabbing;
+    border-style: solid
+    border-width: 10px;
+    border-color: "blue";
+    width: 200px;
+    height: 200px
+    margin: auto;
 }
 
-body{
-  border:50px "white";
-}
